overflow resolved

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,7 @@
 }
 
 .content {
+    position: sticky;
     padding: 10px;
     height: calc(100vh - 92px);
     overflow: scroll;
@@ -20,6 +21,7 @@
 
 @media (max-width: 900px) and (max-height: 900px) {
     .explorer{
+        z-index:10;
         margin: 20px;
         position: absolute;
         bottom: 10px;
